mission/mission.css
#content {
    max-width: 60%;
    border: 1px solid darkblue;
    margin: 30px auto;
    padding: 50px 80px;
}
h1, h2 {
    text-align: center;
    line-height: 1.6; 
    text-transform: uppercase;
}
h1 {
    letter-spacing: 6px;
    font-weight: bold;
}
h2 {
    letter-spacing: 3px;
    color: steelblue;
    font-size: smaller;
    font-weight: lighter;
}
hr {
    width: 90%;

}
#italic-text {
    font-style: italic;
}
p {
    margin-top: 30px;
    line-height: 1.5em;
    width: 80%;
}
img {
    width: 20%;
    margin: 50px auto;
    display: block;
}
.list {
    list-style-type: decimal;
    line-height: 1.6em;
    width: 80%;
}
.list li {
    margin-bottom: 12px;
}

